--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "init-db": "node scripts/init-db.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "type-check": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -18,6 +27,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
+    "@tanstack/react-query": "^5.17.0",
     "@vercel/kv": "^3.0.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
@@ -37,28 +47,39 @@
     "pg": "^8.15.6",
     "prisma": "^6.7.0",
     "qrcode": "^1.5.4",
+    "rate-limiter-flexible": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "vcards-js": "^2.10.0"
+    "vcards-js": "^2.10.0",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^4.17.21",
     "@types/formidable": "^3.4.5",
+    "@types/jest": "^29.5.8",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lighthouse": "^11.4.0",
     "postcss": "^8.4.32",
     "svgexport": "^0.4.2",
     "tailwindcss": "^3.4.0",
