🐘 PostgreSQL Migration Tamamlandı
✅ Database Upgrade:
- SQLite → PostgreSQL geçişi
- Schema provider güncellendi
- pg ve @types/pg paketleri eklendi
- Prisma client PostgreSQL için generate edildi

🔧 Configuration:
- .env dosyası PostgreSQL için hazırlandı
- Vercel Postgres environment variables eklendi
- SQLite backup connection korundu

📚 Documentation:
- POSTGRESQL_MIGRATION.md rehberi oluşturuldu
- Deployment adımları detaylandırıldı
- Performance optimizasyonları eklendi
- Troubleshooting guide hazırlandı

🚀 Benefits:
- Concurrent user support
- Better performance & scalability
- Advanced database features
- Production-ready architecture

Ready for Vercel deployment with PostgreSQL! 🎯

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.7.0",
     "@tanstack/react-query": "^5.17.0",
+    "@types/pg": "^8.15.4",
     "@vercel/kv": "^3.0.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
@@ -44,7 +45,7 @@
     "next": "^14.0.4",
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
-    "pg": "^8.15.6",
+    "pg": "^8.16.3",
     "prisma": "^6.7.0",
     "qrcode": "^1.5.4",
     "rate-limiter-flexible": "^2.4.2",
