cleanup: Remove SQLite databases and prepare for Supabase only
- Remove all SQLite database files (db.sqlite, prisma/*.db)
- Remove Vercel deployment guide (replaced with Supabase)
- Remove test deployment files
- Update .env for Supabase configuration
- Update .gitignore to exclude SQLite files
- Project now uses Supabase PostgreSQL exclusively

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,13 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# SQLite databases (not needed for Supabase)
+*.sqlite
+*.sqlite3
+*.db
+prisma/*.db
+prisma/data/
+
 # vercel
 .vercel
 
