--- a/package.json
+++ b/package.json
@@ -68,13 +68,14 @@
     "@next/bundle-analyzer": "^16.1.1",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.6",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.19.27",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "jsdom": "^27.4.0",
+    "playwright": "^1.57.0",
     "typescript": "^5.9.3"
   }
 }
